# faiss-next

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  faiss.h  index_l2.idx  wrapper.h
examples/: 01_factory.rs  01_getting_started.rs  02_faster_search.rs  02_flat.rs  02_one_gpu.rs  03_flat_refine.rs  03_lower_memory_footprint.rs  03_many_gpu.rs  04_ivf_flat.rs  05_lsh.rs  06_pre_transform.rs  07_idmap.rs  08_replica.rs  09_shards.rs  gpu_test.rs  l2_benchmark.rs
faiss/: Cargo.toml
faiss-next/: Cargo.toml  README.md
faiss-next-sys/: Cargo.toml  README.md  build.rs  faiss.h  faissw.h  wrapper.h
faiss-next-sys/src/: lib.rs  linux-x86_64-cpu.rs  linux-x86_64-gpu.rs  macos-aarch64-cpu.rs  version.rs
faiss-next-sys/src/bindings/: mod.rs
faiss-next-sys/src/bindings/v1_14/: linux_x86_64.rs  linux_x86_64_cuda.rs  macos_aarch64.rs  mod.rs  windows_x86_64.rs  windows_x86_64_cuda.rs
faiss-next-sys/src/extension/: gpu_distance.cpp  gpu_distance.hpp  index_binary_factory.cpp  index_binary_factory.hpp  mod.rs
faiss-next-sys/src/linux/: bindings.rs  bindings_gpu.rs  x86_64.rs  x86_64_cuda.rs
faiss-next-sys/src/macos/: bindings.rs
faiss-next-sys/src/macos/aarch64/: cpu.rs
faiss-next-sys/src/windows/: bindings.rs  bindings_gpu.rs
faiss-next/src/: cluster.rs  error.rs  index.rs  lib.rs  macros.rs  transformer.rs
faiss/src/: lib.rs
src/: accuracy_tests.rs  autotune.rs  aux_index_structures.rs  clone_index.rs  cluster.rs  clustering.rs  distance.rs  distance_computer.rs  error.rs  factory.rs  id_selector.rs  idx.rs  impl_aux_index_structure.rs  impl_aux_index_structures.rs  index.rs  index_binary.rs  index_factory.rs  index_flat.rs  index_io.rs  index_ivf.rs  index_ivf_flat.rs  index_lsh.rs  index_pre_transform.rs  index_replicas.rs  index_scalar_quantizer.rs  index_shards.rs  io.rs  lib.rs  macros.rs  meta_index.rs  meta_indexes.rs  metric.rs  pairwise.rs  parameter.rs  prelude.rs  quantizer.rs  range_search.rs  result.rs  search_params.rs  selector.rs  (+4 more)
src/bindings/: mod.rs
src/bindings/macos/: aarch64_cuda.rs
src/cpp/: aux_index_structures.cpp  aux_index_structures.hpp  distance_computer.cpp  distance_computer.hpp  id_selector.cpp  id_selector.hpp  index.cpp  index.hpp  index_binary.cpp  index_binary.hpp  index_factory.cpp  index_factory.hpp  types.hpp
src/cuda/: device_utils.rs  gpu_autotune.rs  gpu_cloner_options.rs  gpu_distance.rs  gpu_index.rs  gpu_indices_options.rs  gpu_resources.rs  mod.rs  standard_gpu_resources.rs
src/extension/: cuda.rs  gpu_distance.cpp  gpu_distance.hpp  index_binary_factory.cpp  index_binary_factory.hpp  mod.rs
src/ffi/: mod.rs
src/gpu/: autotune.rs  cloner_options.rs  device_utils.rs  index.rs  indices_options.rs  mod.rs  resources.rs  standard_resources.rs
src/implement/: distance_computer.rs  id_selector.rs  mod.rs  range_search_result.rs
src/index/: README.md  binary.rs  clone.rs  common.rs  factory.rs  flat.rs  flat1d.rs  id_map.rs  id_map2.rs  id_selector.rs  impl_.rs  io.rs  ivf.rs  ivf_flat.rs  ivf_scalar_quantizer.rs  lsh.rs  meta.rs  metric.rs  mod.rs  native.rs  owned.rs  parameters.rs  pre_transform.rs  pretransform.rs  range.rs  refine_flat.rs  replicas.rs  scalar_quantizer.rs  shards.rs  traits.rs
tests/: basic_tests.rs
