workspace = { members = ["faiss-next-sys"] }

[package]
name = "faiss-next"
version = "1.0.0"
edition = "2021"

[features]
default = []
bindgen = ["faiss-next-sys/bindgen"]
cuda = ["faiss-next-sys/cuda"]

[dependencies]
tracing = "0.1.41"
faiss-next-sys = { version = "1.0.0", path = "./faiss-next-sys" }
itertools = "0.14.0"
thiserror = "2.0.17"

[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = "0.3.20"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
