[package]
name = "faiss-next"
version = "0.6.0"
edition = "2021"
description = "Rust bindings for Faiss (Facebook AI Similarity Search)"
license = "MIT"
keywords = ["faiss", "similarity-search", "vector-search", "ann", "machine-learning"]
categories = ["science", "algorithms", "api-bindings"]

[features]
default = []
cuda = []
bindgen = ["dep:bindgen"]

[dependencies]
cxx = "1.0"
thiserror = "1.0"
tracing = "0.1"

[build-dependencies]
cxx-build = "1.0"
bindgen = { version = "0.70", optional = true }

[dev-dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"