[package]
name = "faiss-next"
version = "0.6.0"
edition = "2021"
description = "Rust bindings for Faiss (Facebook AI Similarity Search)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yexiangyu/faiss-next"
homepage = "https://github.com/yexiangyu/faiss-next"
documentation = "https://docs.rs/faiss-next"
keywords = ["faiss", "similarity-search", "vector-search", "ann", "machine-learning"]
categories = ["science", "algorithms", "api-bindings"]

[features]
default = []
cuda = ["faiss-next-sys/cuda"]
bindgen = ["faiss-next-sys/bindgen"]

[dependencies]
faiss-next-sys = { path = "faiss-next-sys", version = "0.6.0" }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"

[[example]]
name = "gpu_test"
required-features = ["cuda"]

[workspace]
members = ["faiss-next-sys"]