[package]
name = "faiss-next-sys"
version = "0.2.0"
edition = "2021"
license = "MIT License"
description = "Light weighted rust wrapper of c api of facebookresearch/faiss library"
homepage = "http://github.com/yexiangyu/faiss-next"
documentation = "https://docs.rs/faiss-next"
repository = "https://github.com/yexiangyu/faiss-next"
keywords = ["faiss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gpu = []
bindgen = []

[build-dependencies]
bindgen = "0.69.2"

[dependencies]
